--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: Backend CI
 
 on:
@@ -38,6 +39,8 @@ jobs:
         echo "Secret 1 is: $MONGO_URI"
         echo "Secret 2 is: $JWT_SECRET"
         echo "Secret 3 is: $PORT"
+      
+    - run: pm2 stop all
 
     # Install dependencies for backend
     - name: Install Backend Dependencies
@@ -73,5 +76,6 @@ jobs:
         touch .env
         echo "${{ secrets.PROD }}" > .env
 
+    - run: pm2 start all
 
     - run: pm2 restart all
