--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
       run: |
         df -h
         sudo rm -rf ./build
+        npm install --global yarn
         yarn install
         yarn run build
 
